# iPIC3D-search

./: .gitignore  CMakeLists.txt  README.md
share/benchmark/: .gitignore  GH200_release_baseline.csv  benchmark.sh  benchmarkBarChart.py  build.sh  readme.md
share/inputfiles/: CMakeLists.txt
share/inputfiles/magneticReconnection/: testGEM3Dsmall.inp
src/include/: Alloc.h  EMfields3D.h  Particles3Dcomm.h  iPic3D.h  threadPool.hpp
src/include/CUDA/: arrayCUDA.cuh  cudaTypeDef.cuh  gridCUDA.cuh  hashedSum.cuh  particleArrayCUDA.cuh  particleArraySoACUDA.cuh
src/include/dataAnalysis/: cudaReduction.cuh  dataAnalysis.cuh  dataAnalysisConfig.cuh
src/include/dataAnalysis/GMM/: cudaGMM.cuh  cudaGMMkernel.cuh
src/include/dataAnalysis/Histogram/: velocityHistogram.cuh
src/include/hip/: .gitignore  hipifly.hpp  hipify-postProcess.sh  hipify.sh
src/ipic3d/: iPIC3D.cpp
src/ipic3d/cudaKernel/: moverKernel.cu  particleArraySoACUDA.cu
src/ipic3d/dataAnalysis/: dataAnalysis.cu  velocityHistogram.cu  velocityHistogramKernel.cu
src/ipic3d/fields/: EMfields3D.cpp
src/ipic3d/grids/: Grid3DCU.cpp
src/ipic3d/inputoutput/: outputPrepare.cpp
src/ipic3d/main/: iPIC3Dlib.cu
src/unitTest/reduction/: CMakeLists.txt  reductionTest.cu
